--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Tools</string>
+    <string name="action_settings">Home</string>
     <string name="title_activity_fire_base_login_main">FireBaseLoginMain</string>
 
     <string name="label_google_sign_in">Firebase + Google Sign In</string>
