+added mapbox support yeayyyy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
 
     <string name="facebook_status_fmt">Facebook User: %s</string>
     <string name="facebook_title_text">Facebook Login</string>
+    <string name="mapbox_key">pk.eyJ1IjoiYW5hbnQxOTk0IiwiYSI6ImNqZXBzdzF2ZjAwMncycXB0enZ6ZDR6dXgifQ.kaxLDJTeiJEZFQ1xC-WLUA</string>
 
     <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
     <string name="emailpassword_title_text">Email and Password</string>
@@ -83,6 +84,9 @@
 
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
+    <string name="map_title">Map Boxxxxxxxxxxx</string>
+    <string name="map_snip">Snippet</string>
+
 
 
 </resources>
