+added mapbox location handling from firebase cloud firestore. +added user current location handling.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,8 @@
     <string name="email_fmt">Email: %s</string>
     <string name="map_title">Map Boxxxxxxxxxxx</string>
     <string name="map_snip">Snippet</string>
+    <string name="mapbox_zoom">15.0</string>
+
 
 
 
