+added tools activity. +implemented shared preferences to save app states. +added logic to switch on of sound. +minor fixes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,10 @@
     <string name="game_page">Search Game</string>
 
 
-
     <string name="label_google_sign_in">Firebase + Google Sign In</string>
     <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
+    <string name="sound_toogle">Sounds</string>
+    <string name="tools_act">Tools</string>
 
     <string name="label_facebook_login">Firebase + Facebook Login</string>
     <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
