--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="title_activity_fire_base_login_main">FireBaseLoginMain</string>
     <string name="game_page">Search Game</string>
 
+    <string name="search_game">Search for a Game</string>
+
 
     <string name="label_google_sign_in">Firebase + Google Sign In</string>
     <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
