--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,7 +101,7 @@
 
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
-    <string name="map_title">Map Boxxxxxxxxxxx</string>
+    <string name="map_title">Default Item</string>
     <string name="map_snip">Snippet</string>
     <string name="mapbox_zoom">15.0</string>
 
