--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="guess_pwd_text">Guess the Password</string>
     <string name="guess_pwd">Guess</string>
     <string name="mat_text">Materials</string>
-    <string name="let_text">Letters</string>
+    <string name="let_text">Hints</string>
     <string name="let_text_def">No Letters Collected</string>
     <string name="mat_text_def">No Materials Collected</string>
     <string name="def_role">Random</string>
